# platform_vector

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/crud/: __init__.py  base.py  crud_chunk.py  crud_company.py  crud_file.py  crud_files2.py  crud_message.py
app/models/: __init__.py  base.py  chunk.py  company.py  file.py  files2.py  message.py
app/routes/: api.py
app/routes/endpoints/: __init__.py  files.py  filespg.py  messages.py  messagespg.py
app/schemas/: __init__.py  chunk.py  company.py  file.py  files2.py  message.py  request.py  response.py
app/utils/: __init__.py  openai_client.py
